# rate

./: Cargo.toml  README.md  ask.sh  rate.db
.github/workflowo/: release_macos.yml
.github/workflows/: linux_windows_release.yml  release_macos.yml  scp.yml
dockers/: docker-compose.yml
src/: config.rs  database.rs  exchange.rs  help.rs  lib.rs  main.rs  rate.rs  test.rs  translate.rs
