[package]
name = "rate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
base64 = {version ="*"}
rusqlite = { version = "*", features = ["bundled"] }
reqwest = { version = "*", features = ["json","blocking"] }
serde-xml-rs = "0.6"
gethostname = {version ="*"}

[lib]
name = "libs"
path = "src/lib.rs"


